# Amadina

./: .gitignore  CMakeLists.txt
AmadinaModeller/AmadinaModeller/include/: amadina_app.h  main_frame.h
AmadinaModeller/AmadinaModeller/src/: amadina_app.cpp  main_frame.cpp
AmadinaModeller/AmadinaOCCT/include/: circle_occt.h  line_occt.h  occt_canvas.h  occt_object_container.h  occt_op_extrude.h  op_bool_fuse_occt.h  op_extrude_occt.h  point_occt.h  sketch_object.h  sketch_occt.h
AmadinaModeller/AmadinaOCCT/src/: circle_occt.cpp  line_occt.cpp  occt_op_extrude.cpp  op_bool_fuse_occt.cpp  op_extrude_occt.cpp  point_occt.cpp  sketch_occt.cpp
AmadinaModeller/AmadinaObjects/include/: abstract_canvas.h  abstract_operation.h  abstract_shape.h  circle.h  direction.h  direction_vector.h  line.h  op_bool_fuse.h  op_extrude.h  operation_node.h  operations_tree.h  point.h  shape_iterator.h  sketch.h
AmadinaModeller/AmadinaObjects/src/: circle.cpp  direction.cpp  direction_vector.cpp  line.cpp  op_bool_fuse.cpp  op_extrude.cpp  operations_tree.cpp  point.cpp  sketch.cpp
AmadinaModeller/wxOcctView/include/: abstract_modeller.h  factory.h  wxcadhistorytree.h  wxmodeller3d.h  wxoccpanel.h
AmadinaModeller/wxOcctView/src/: context.cpp  factory.cpp  objectpool.cpp  wxcadhistorytree.cpp  (+2 more)
ConsoleInterpreter/: ConsoleInterpreter.cbp  ConsoleInterpreter.cscope_file_list  ConsoleInterpreter.depend  ConsoleInterpreter.layout  interpreter_test.cpp
ConsoleInterpreter/include/: history.h  interpreter.h  lexer.h  lexer_functions.h  lexer_math_functions.h  token.h
ConsoleInterpreter/src/: interpreter.cpp  lexer.cpp  lexer_functions.cpp  lexer_math_functions.cpp  token.cpp
amadin/: main_frame.cpp  main_frame.cpp.save-failed  main_frame.h  wxchoicelayer.h
amadin/menu/: exceptions.h  menu.cpp  menu.h
amadin/res/: gui.fbp
amadin/widgets/: toolbar_items.cpp
amadina/: CMakeLists.txt  amadin_app.cpp  amadin_app.h  main_frame.cpp  main_frame.h  wxchoicelayer.cpp
amadina/Amadina/wx_binding/res/: icons.h
amadina/events/: events.h
amadina/menu/: exceptions.h  menu.cpp  menu.h
amadina/res/icons/: convert.bat
amadina/widgets/: toolbar_items.h
amadina/widgets/console/: uiconsole.cpp  uiconsole.h
amadina3d/: main_frame.cpp  main_frame.h
amadina3d/command/: command.cpp  command.h  dispatcher.h
amadina3d/include/: command_abstract.h  command_dispatcher.h  command_thread.h  commands_names.h  commands_view.h  context.h  drawable.h  floating_inputbox.h  historynode.h  point.h  screen_modes.h  sketch.h  structurenode.h  wxabstractinterractor.h  wxmodeller3d.h  wxoccpanel.h  wxpointinput.h
amadina3d/resources/: art.cpp  art.h  icons.h
amadina3d/src/: command_dispatcher.cpp  commandthread.cpp  context.cpp  floatinginputbox.cpp  historynode.cpp  sketch.cpp  structurenode.cpp  wxabstractinterractor.cpp  wxmodeller3d.cpp  wxoccpanel.cpp  wxpointinput.cpp
kernel/: CMakeLists.txt
kernel/api/: acommand.h  exports.h
kernel/api/src/: acommand.cpp
kernel/builders/: abstractbuilder.cpp  abstractbuilder.h  arc_cmd.cpp  arc_cmd.h  arcp_cmd.cpp  arcp_cmd.h  circle_cmd.cpp  circle_cmd.h  circlebuilder.cpp  circlebuilder.h  circlep_cmd.cpp  circlep_cmd.h  cmd_delete.cpp  copy_cmd.cpp  copy_cmd.h  delete_cmd.cpp  delete_cmd.h  ellipse_cmd.cpp  ellipse_cmd.h  line_cmd.cpp  line_cmd.h  linebuilder.cpp  linebuilder.h  paste_cmd.cpp  paste_cmd.h  point_cmd.cpp  point_cmd.h  pointbuilder.cpp  pointbuilder.h  squarebuilder.cpp  squarebuilder.h
kernel/command/: acommand.cpp  command.cpp  command.h  command.h.save-failed  dispatcher.cpp  dispatcher.h  exceptions.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  tokens.h  uicommands.h
kernel/commands/: abstract_command.h  atomic_command.h  command_line.cpp  command_line.h  ui_communicator.h
kernel/context/: callable.h  clipboard.cpp  clipboard.h  command_executor.cpp  command_executor.h  command_pool.cpp  command_pool.h  context.cpp  context.h
kernel/entities/: arc.cpp  arc.h  circle.cpp  circle.h  ellipse.cpp  ellipse.h  entity.cpp  entity.h  layer.cpp  layer.h  line.cpp  line.h  point.cpp  point.h  square.cpp  square.h
kernel/exceptions/: exceptions.h
kernel/geometry/: geometry.cpp  geometry.h  intersections.cpp  intersections.h
kernel/graphics/: colour.cpp  colour.h  colours.h  dc.h  dcadapter_wx.cpp  dcadapter_wx.h
kernel/processor/: default_commands.cpp  default_commands.h  drawmanager.cpp  drawmanager.h  interpreter.cpp  interpreter.h
kernel/view_2d/: adapter.cpp  adapter.h  screen.cpp  screen.h  screen_comunicator.h  screen_interface.h  viewpanel.cpp  viewpanel.h
tests/: test_interpreter.cpp
wx_binding/: CMakeLists.txt  wx_binding.cpp  wx_binding.h
wx_binding/classes/: dcadapter_wx.cpp  dcadapter_wx.h  events.cpp  events.h  viewpanel.cpp  viewpanel.h
wx_binding/res/: icons.h  provider.cpp  provider.h
wx_binding/src/: wx_binding.cpp  wx_objects.cpp
(+6 files in other folders)
